--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://rahul08jb.github.io/Registration-Web-Application-for-Research-and-Development/",
+
   "name": "iccvml",
   "private": true,
   "version": "0.0.0",
