--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "predeploy": "npm run build",
-     "deploy": "gh-pages -d build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
+,
   "dependencies": {
     "express": "^4.21.1",
     "hbs": "^4.2.0",
